--- a/uplus-woody/index.html
+++ b/uplus-woody/index.html
@@ -128,7 +128,7 @@
     }
 
     timer = setTimeout(() => {
-      window.open(`https://shop.uplus.co.kr/`, '_blank');
+      window.location.href = 'https://shop.uplus.co.kr/';
       timer = null;
     }, 1000);
   };
