Doit5 project update

--- a/doit-5/index.html
+++ b/doit-5/index.html
@@ -4,24 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <title>ARX BOX</title>
-  <script src="https://d-developer.letsee.io/api/webar?key=4ba146812fb958a2823a79842c4eb9bad76970d4920a7fb7d4af4ec7a20f1212"></script>
+  <script src="https://developer.letsee.io/api/webar?key=e4fde6e2800576b0c332b6bb4a41f49148a2d8327c38227f86e011aa6ccb77d7"></script>
+  <style>
+    #loading {
+      position:absolute;
+      width: 5vw;
+      height:5vw;
+      left: 49vw;
+      top: calc(50vh - 2vw);
+      z-index: 200;
+    }
+    #loading img{
+      width: 100%;
+      height:100%;
+      object-fit: contain;
+    }
+  </style>
   <style media="place" type="text/css">
     #container {
-      -letsee-target: uri("https://d-developer.letsee.io/api-tm/target-manager/target-uid/60e2bcfd821c70ad32ca9859");
-      width: 300px; /* 300px */
-      height: 400px; /* 212.25px */
+      -letsee-target: uri("https://developer.letsee.io/api-tm/target-manager/target-uid/6111ef09398942b60ead2d47");
+      width: 733px; /* 300px */
+      height: 772px; /* 212.25px */
       border: 3px solid black;
     }
+
   </style>
 </head>
 <body>
 <div id="container"></div>
+<div id="loading">
+  <img src="loading.gif" />
+</div>
 <!-- Loading the Letsee WebAR Engine -->
 <script type="application/javascript">
 	letsee.ready(() => {
 		letsee.start();
 	});
 	letsee.init({trackerType:"image"});
+
+    letsee.videoManager().srcVideo.addEventListener('canplay', () => {
+      document.getElementById('loading').style.display = 'none';
+    })
 </script>
 </body>
 </html>
