--- a/uplus-woody/index.html
+++ b/uplus-woody/index.html
@@ -5,7 +5,7 @@
   <title>Letsee WebAR - glTF Loader</title>
 
   <!-- Letsee SDK -->
-  <script src="https://developer.letsee.io/api/webar?key=4691b154391bbf1d2a2505353e047395c24459c7e188594a8fc9b0fdff900cd4"></script>
+  <script src="h"></script>
 
   <script src="https://unpkg.com/three@0.126.1/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.126.1/examples/js/loaders/RGBELoader.js"></script>
